--- a/Diner/Base.lproj/Main.storyboard
+++ b/Diner/Base.lproj/Main.storyboard
@@ -103,7 +103,13 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" id="NUC-wR-Htu"/>
+                    <navigationItem key="navigationItem" id="NUC-wR-Htu">
+                        <barButtonItem key="leftBarButtonItem" title="Filter" id="nMR-Er-OoY">
+                            <connections>
+                                <segue destination="vjq-up-RXA" kind="presentation" id="xag-nD-1SI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="2YK-Sp-Kuy" id="HEs-mT-GJu"/>
                     </connections>
@@ -111,6 +117,44 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="137.18140929535232"/>
+        </scene>
+        <!--Filter View Controller-->
+        <scene sceneID="bCb-3f-1Im">
+            <objects>
+                <viewController id="vjq-up-RXA" customClass="FilterViewController" customModule="Diner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IIS-gX-yh2"/>
+                        <viewControllerLayoutGuide type="bottom" id="R9S-WY-lf5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yrA-9D-DJF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3sr-Ej-DJ4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Filters" id="zZa-GA-dJQ">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="eTx-J8-wvt">
+                                            <connections>
+                                                <action selector="cancelPressed:" destination="vjq-up-RXA" id="99n-ci-dpk"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Search" id="rFL-Nx-CD6">
+                                            <connections>
+                                                <action selector="searchPressed:" destination="vjq-up-RXA" id="zKZ-za-ECe"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ve6-DQ-RFU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1881" y="136"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oyF-HR-d9S">
