--- a/Diner/Base.lproj/Main.storyboard
+++ b/Diner/Base.lproj/Main.storyboard
@@ -109,6 +109,11 @@
                                 <segue destination="vjq-up-RXA" kind="presentation" id="xag-nD-1SI"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Map" id="Cx1-kH-xp3">
+                            <connections>
+                                <segue destination="M8f-K7-jb5" kind="presentation" modalTransitionStyle="flipHorizontal" id="8zc-V5-xR1"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="2YK-Sp-Kuy" id="HEs-mT-GJu"/>
@@ -199,7 +204,47 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ve6-DQ-RFU" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Seu-pC-Kya" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1880.8" y="135.38230884557723"/>
+            <point key="canvasLocation" x="2097" y="-234"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="aCQ-EZ-iD9">
+            <objects>
+                <viewController id="M8f-K7-jb5" customClass="MapViewController" customModule="Diner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="n2E-uA-Yze"/>
+                        <viewControllerLayoutGuide type="bottom" id="01a-Wg-wdf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="91e-yQ-g7b">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hn8-VI-SUT">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Map" id="4ab-am-gi4">
+                                        <barButtonItem key="rightBarButtonItem" title="List" id="Gmi-K0-s4r">
+                                            <connections>
+                                                <action selector="listPressed:" destination="M8f-K7-jb5" id="nKg-0e-eal"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="5Sf-VP-3P8">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="map" destination="5Sf-VP-3P8" id="bfU-dT-lgH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CEW-sT-PTa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2097" y="484"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oyF-HR-d9S">
